修改生成脚本

--- a/generate.ipynb
+++ b/generate.ipynb
@@ -2,7 +2,7 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 13,
             "source": [
                 "import os\n",
                 "import openpyxl\n",
@@ -23,23 +23,37 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 15,
             "source": [
-                "output_txt_path = './mot_save/mot_results/output.txt'                              #FairMOT算法输出的outpu.txt路径\n",
-                "source_video_path = '/home/swjtu/dataset/武侯高级中学监控视频/D14_20210929084614.mp4' #原视频路径\n",
+                "#FairMOT算法输出的outpu.txt路径\n",
+                "output_txt_path = 'output/20211012/D02_20211012103524/mot_results/D02_20211012103524.txt' \n",
+                "#原视频路径\n",
+                "source_video_path = '/home/swjtu/dataset/20211012/D02_20211012103524.mp4' \n",
+                "#裁剪图片保存目录\n",
+                "save_crops_path = './output/D02_20211012103524/crops'   \n",
+                "#excel保存目录                                           \n",
+                "save_excel_path = \"./output/D02_20211012103524.xlsx\" \n",
+                "     \n",
+                "#原视频相机序号\n",
+                "source_video_camera_id = 2                                                        \n",
+                "#原视频片段序号(按文件名升序从1开始排列)\n",
+                "source_video_seq_id = 4                                                        \n",
+                "#原视频真实起始日期时间\n",
+                "source_video_start_time = \"20211012103524\"   \n",
+                "                                      \n",
+                "#原视频帧率\n",
+                "source_video_frame_rate = 25.01     \n",
+                "#MOT算法检测帧率                                               \n",
+                "detection_frame_rate = 25.01        \n",
+                "#间隔多少帧截取一次行人图像                                               \n",
+                "crop_frame_interval = 25    \n",
                 "\n",
-                "source_video_camera_id = 14                                                        #原视频相机序号\n",
-                "source_video_seq_id = 2                                                            #原视频片段序号\n",
-                "source_video_start_time = \"20210929084615\"                                         #原视频真实起始日期时间\n",
-                "\n",
-                "source_video_frame_rate = 25.01                                                    #原视频帧率\n",
-                "detection_frame_rate = 25.01                                                       #MOT算法检测帧率\n",
-                "crop_frame_interval = 25                                                           #间隔多少帧截取一次行人图像\n",
-                "ignore_pids = []                                                                   #忽略行人ID\n",
-                "min_box_area = -1                                                                  #最小行人框大小（在FairMOT中设置即可）\n",
-                "\n",
-                "save_crops_path = './mot_save/crops/'                                              #裁剪图片保存目录\n",
-                "save_excel_path = \"./mot_save/D14_20210929084614_5分钟数据标注.xlsx\"                 #excel保存目录"
+                "#忽略行人ID                                                       \n",
+                "ignore_pids = []\n",
+                "#阈值过滤\n",
+                "min_threshold = -1                                                                    \n",
+                "#最小行人框大小（在FairMOT中设置即可）\n",
+                "min_box_area = -1                                 "
             ],
             "outputs": [],
             "metadata": {}
@@ -53,14 +67,27 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 19,
             "source": [
                 "output = []\n",
                 "with open(output_txt_path,'r') as f:\n",
                 "    for line in f.readlines():\n",
-                "        output.append(line.split(',')[:7])"
+                "        frame, pid, x, y, w, h, threshold = line.split(',')[:7]\n",
+                "        frame, pid, x, y, w, h, threshold = int(frame), int(pid), float(x), float(y), float(w), float(h), float(threshold)\n",
+                "        if pid in ignore_pids or (min_box_area!=-1 and w*h<min_box_area) or (min_threshold!=-1 and threshold < min_threshold):\n",
+                "            continue\n",
+                "        output.append([frame, pid, x, y, w, h, threshold])\n",
+                "print(len(output))"
             ],
-            "outputs": [],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "90724\n"
+                    ]
+                }
+            ],
             "metadata": {}
         },
         {
@@ -72,49 +99,37 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": null,
             "source": [
                 "cap = cv2.VideoCapture(source_video_path)\n",
                 "cur_frame = 1\n",
                 "frame_ratio = source_video_frame_rate / detection_frame_rate\n",
                 "index = 0\n",
                 "len_output = len(output)\n",
+                "if not os.path.exists(save_crops_path):\n",
+                "    os.makedirs(save_crops_path)\n",
                 "pbar = tqdm(total=len_output)\n",
                 "pbar.set_description('Processing:')\n",
+                "\n",
                 "while index < len_output:\n",
                 "    ret, img = cap.read()   \n",
                 "    if ret == False or img is None: break\n",
-                "    while index < len_output and cur_frame == int(output[index][0]):\n",
-                "        frame, pid, x, y, w, h = [int(float(i)) for i in output[index][:-1]]\n",
+                "    while index < len_output and cur_frame == output[index][0]:\n",
+                "        frame, pid, x, y, w, h, threshold = output[index]\n",
                 "        index += 1\n",
                 "        pbar.update(1)\n",
-                "        if (cur_frame-1) % crop_frame_interval != 0 or pid in ignore_pids or (min_box_area!=-1 and w*h<min_box_area): \n",
+                "        if (cur_frame-1) % crop_frame_interval != 0:\n",
                 "            continue \n",
-                "        \n",
+                "        #通过帧号计算日期时间\n",
                 "        time = datetime.datetime.strptime(source_video_start_time, \"%Y%m%d%H%M%S\") + datetime.timedelta(seconds=round(frame/detection_frame_rate))\n",
                 "        fileName = \"%04d_c%02ds%02d_%04d_%s.jpg\" % (pid, source_video_camera_id, source_video_seq_id, round(frame * frame_ratio)\n",
                 "                                                    , time.strftime(\"%Y%m%d%H%M%S\"))\n",
                 "        if x*y*w*h > 0:\n",
-                "            cv2.imwrite(os.path.join(save_crops_path, fileName), img[y:y+h, x:x+w])\n",
+                "            cv2.imwrite(os.path.join(save_crops_path, fileName), img[round(y):round(y+h), round(x):round(x+w)])\n",
                 "        \n",
                 "    cur_frame += 1"
             ],
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/plain": [
-                            "  0%|          | 0/3225 [00:00<?, ?it/s]"
-                        ],
-                        "application/vnd.jupyter.widget-view+json": {
-                            "version_major": 2,
-                            "version_minor": 0,
-                            "model_id": "c870a860c1c64a06b12bce0ef35f10cc"
-                        }
-                    },
-                    "metadata": {}
-                }
-            ],
+            "outputs": [],
             "metadata": {}
         },
         {
@@ -126,20 +141,20 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": 22,
             "source": [
                 "wb = openpyxl.Workbook()\n",
                 "ws = wb['Sheet']\n",
                 "ws.append(['人员ID', '进入时间', '离开时间', '进入帧号', '离开帧号', '摄像头ID', '视频片段序号'])\n",
                 "\n",
                 "idMap = {}\n",
-                "for frame,pid,x1,y1,w,h,score in output:\n",
-                "    if pid in ignore_pids or (min_box_area!=-1 and float(w)*float(h)<min_box_area): continue\n",
+                "for frame,pid,x1,y1,w,h,threshold in output:\n",
                 "    if pid not in idMap:\n",
-                "        idMap[pid] = [int(frame), int(frame)] # in_frame, out_frame\n",
+                "        idMap[pid] = [frame, frame] # in_frame, out_frame\n",
                 "    else:\n",
-                "        idMap[pid][1] = int(frame)\n",
+                "        idMap[pid][1] = frame\n",
                 "for pid in idMap:\n",
+                "    # 通过帧号计算视频内的时间轴信息\n",
                 "    in_time, out_time = [ \"%02d:%02d:%02d\" % (time//3600, time%3600//60, time%60) for time in [ frame // detection_frame_rate for frame in idMap[pid]] ]\n",
                 "    ws.append([pid, in_time, out_time, idMap[pid][0], idMap[pid][1], source_video_camera_id, source_video_seq_id])\n",
                 "wb.save(save_excel_path)"
