修改行人图片裁剪策略：保证crop同一个ID的相邻图片之间的最小帧间隔

--- a/generate.ipynb
+++ b/generate.ipynb
@@ -2,7 +2,7 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": 24,
             "source": [
                 "import os\n",
                 "import openpyxl\n",
@@ -23,37 +23,38 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
+            "execution_count": 46,
             "source": [
                 "#FairMOT算法输出的outpu.txt路径\n",
-                "output_txt_path = 'output/20211012/D02_20211012103524/mot_results/D02_20211012103524.txt' \n",
+                "output_txt_path = 'output/20211012/D02_20211012075959/mot_results/D02_20211012075959.txt' \n",
                 "#原视频路径\n",
-                "source_video_path = '/home/swjtu/dataset/20211012/D02_20211012103524.mp4' \n",
+                "source_video_path = '/home/swjtu/dataset/20211012/D02_20211012075959.mp4' \n",
                 "#裁剪图片保存目录\n",
-                "save_crops_path = './output/D02_20211012103524/crops'   \n",
+                "save_crops_path = './output/20211012/D02_20211012075959/crops'   \n",
                 "#excel保存目录                                           \n",
-                "save_excel_path = \"./output/D02_20211012103524.xlsx\" \n",
+                "save_excel_path = \"./output/20211012/D02_20211012075959/D02_20211012075959.xlsx\" \n",
                 "     \n",
                 "#原视频相机序号\n",
-                "source_video_camera_id = 2                                                        \n",
+                "source_video_camera_id = 1                                               \n",
                 "#原视频片段序号(按文件名升序从1开始排列)\n",
-                "source_video_seq_id = 4                                                        \n",
+                "source_video_seq_id = 1                                                     \n",
                 "#原视频真实起始日期时间\n",
-                "source_video_start_time = \"20211012103524\"   \n",
+                "source_video_start_time = \"20211012080011\"   \n",
                 "                                      \n",
                 "#原视频帧率\n",
                 "source_video_frame_rate = 25.01     \n",
                 "#MOT算法检测帧率                                               \n",
                 "detection_frame_rate = 25.01        \n",
-                "#间隔多少帧截取一次行人图像                                               \n",
-                "crop_frame_interval = 25    \n",
+                "#crop同一个ID的2张图片最小帧间隔                                               \n",
+                "crop_frame_interval = 10  \n",
+                "  \n",
                 "\n",
                 "#忽略行人ID                                                       \n",
                 "ignore_pids = []\n",
                 "#阈值过滤\n",
                 "min_threshold = -1                                                                    \n",
                 "#最小行人框大小（在FairMOT中设置即可）\n",
-                "min_box_area = -1                                 "
+                "min_box_area = 20000                             "
             ],
             "outputs": [],
             "metadata": {}
@@ -67,7 +68,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 19,
+            "execution_count": 45,
             "source": [
                 "output = []\n",
                 "with open(output_txt_path,'r') as f:\n",
@@ -84,7 +85,7 @@
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
-                        "90724\n"
+                        "4018\n"
                     ]
                 }
             ],
@@ -99,7 +100,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 36,
             "source": [
                 "cap = cv2.VideoCapture(source_video_path)\n",
                 "cur_frame = 1\n",
@@ -110,7 +111,10 @@
                 "    os.makedirs(save_crops_path)\n",
                 "pbar = tqdm(total=len_output)\n",
                 "pbar.set_description('Processing:')\n",
-                "\n",
+                "last_crop_frame_dic = {}\n",
+                "for i in output:\n",
+                "    # 初始化为-crop_frame_interval\n",
+                "    last_crop_frame_dic[i[1]] = -crop_frame_interval \n",
                 "while index < len_output:\n",
                 "    ret, img = cap.read()   \n",
                 "    if ret == False or img is None: break\n",
@@ -118,8 +122,11 @@
                 "        frame, pid, x, y, w, h, threshold = output[index]\n",
                 "        index += 1\n",
                 "        pbar.update(1)\n",
-                "        if (cur_frame-1) % crop_frame_interval != 0:\n",
-                "            continue \n",
+                "        # if (cur_frame-1) % crop_frame_interval != 0:\n",
+                "        # 当前帧的pid距离上一次crop小于crop_frame_interval帧则跳过\n",
+                "        if cur_frame - last_crop_frame_dic[pid] < crop_frame_interval:\n",
+                "            continue\n",
+                "        last_crop_frame_dic[pid] = cur_frame\n",
                 "        #通过帧号计算日期时间\n",
                 "        time = datetime.datetime.strptime(source_video_start_time, \"%Y%m%d%H%M%S\") + datetime.timedelta(seconds=round(frame/detection_frame_rate))\n",
                 "        fileName = \"%04d_c%02ds%02d_%04d_%s.jpg\" % (pid, source_video_camera_id, source_video_seq_id, round(frame * frame_ratio)\n",
@@ -129,7 +136,22 @@
                 "        \n",
                 "    cur_frame += 1"
             ],
-            "outputs": [],
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/plain": [
+                            "  0%|          | 0/4018 [00:00<?, ?it/s]"
+                        ],
+                        "application/vnd.jupyter.widget-view+json": {
+                            "version_major": 2,
+                            "version_minor": 0,
+                            "model_id": "da872aeebad543c2897c875b63272906"
+                        }
+                    },
+                    "metadata": {}
+                }
+            ],
             "metadata": {}
         },
         {
@@ -141,7 +163,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 22,
+            "execution_count": 33,
             "source": [
                 "wb = openpyxl.Workbook()\n",
                 "ws = wb['Sheet']\n",
