--- a/merge.ipynb
+++ b/merge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
     "import os\n",
     "import openpyxl\n",
@@ -15,16 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "source": [
     "# 记录了合并id的表格，每列为一个摄像头，id用空格隔开，不能有任何符号、空行\n",
-    "mergeExcelPath = '/home/swjtu/reid/PaddleDetection/output/D1D2/merge.xlsx'\n",
+    "mergeExcelPath = '/home/swjtu/reid/PaddleDetection/output/D1D2/merge_D1D2.xlsx'\n",
     "# 存放需要合并的所有图片\n",
     "picPath = '/home/swjtu/reid/PaddleDetection/output/D1D2/D1D2'\n",
     "# 汇总了所有需要合并的摄像头的单个excel\n",
     "excelPath = '/home/swjtu/reid/PaddleDetection/output/D1D2/D1D2.xlsx'\n",
-    "# 需要合并的摄像头的id\n",
-    "cam_ids = [1,2]\n",
+    "# excel每列的摄像头id，注意是二维数组！\n",
+    "cam_ids = [ [1], [2] ]\n",
+    "\n",
     "\n",
     "# 结果输出目录\n",
     "savePath = '/home/swjtu/reid/PaddleDetection/output/D1D2/merge_result/'\n",
@@ -43,10 +44,15 @@
     "    else:\n",
     "        fa[x] = find(fa[x])\n",
     "        return fa[x]\n",
+    "    \n",
+    "cam_id_dict = {}\n",
+    "for i, ids in enumerate(cam_ids):\n",
+    "    for pid in ids:\n",
+    "        cam_id_dict[pid] = i\n",
     "for root, dirs, files in os.walk(picPath):\n",
     "    for img in files:\n",
     "        pid, cam, seq, frame, vdate = re.match(r'(\\d*)_c(\\d*)s(\\d*)_(\\d*)_(\\d*)\\.jpg',img).groups()\n",
-    "        pid_ = cam_ids.index(int(cam))*5000+int(pid)\n",
+    "        pid_ = cam_id_dict[int(cam)]*5000+int(pid)\n",
     "        pids.append(pid_)\n",
     "for row in sheet.rows:\n",
     "    row_data = []\n",
@@ -78,20 +84,20 @@
     "for root, dirs, files in os.walk(picPath):\n",
     "    for img in files:\n",
     "        pid, cam, seq, frame, vdate = re.match(r'(\\d*)_c(\\d*)s(\\d*)_(\\d*)_(\\d*)\\.jpg',img).groups()\n",
-    "        pid_ = cam_ids.index(int(cam))*5000+int(pid)\n",
+    "        pid_ = cam_id_dict[int(cam)]*5000+int(pid)\n",
     "        new_label = relabel[pid_] if pid_ in relabel else int(pid)\n",
     "        new_file = \"%04d_c%ss%s_%s_%s.jpg\" % (new_label, cam, seq, frame, vdate)\n",
     "        # print(img,new_file)\n",
     "        copyfile(os.path.join(root,img), os.path.join(os.path.join(savePath,'crop'),new_file))\n",
     "        \n",
-    "# excel改id\n",
+    "# # excel改id\n",
     "xlsx = []\n",
     "wb2 = openpyxl.load_workbook(excelPath)\n",
     "ws2 = wb2['Sheet']\n",
     "for row in ws2.rows:\n",
     "    pid, in_time, out_time, in_frame, out_frame, cam_id, seq = [c.value for c in row]\n",
     "    if pid == '人员ID': continue\n",
-    "    pid_ = cam_ids.index(int(cam))*5000+int(pid)\n",
+    "    pid_ = cam_id_dict[int(cam)]*5000+int(pid)\n",
     "    new_label = relabel[pid_] if pid_ in relabel else int(pid)\n",
     "    xlsx.append([new_label, in_time, out_time, in_frame, out_frame, cam_id, seq])\n",
     "xlsx = sorted(xlsx, key = lambda x:x[0])\n",
@@ -100,7 +106,7 @@
     "new_ws.append(['人员ID', '进入时间', '离开时间', '进入帧号', '离开帧号', '摄像头ID', '视频片段序号'])\n",
     "for i in xlsx:\n",
     "    new_ws.append(i)\n",
-    "new_wb.save(os.path.join(savePath, 'test.xlsx'))"
+    "new_wb.save(os.path.join(savePath, 'test2.xlsx'))"
    ],
    "outputs": [],
    "metadata": {}
